tests/negative/req11/secret_to_console.mvl
// corpus:expect-fail
// expect-requirement: 11
// Scenario: Secret[Bool] condition controls a Console println in both branches.
//           Whether access is granted or denied leaks the secret flag value.
// Triggers: CheckError::ImplicitFlowViolation (req11)

fn check_access(authorized: Secret[Bool]) -> Unit ! Console {
    // VIOLATION: both branches of a Secret-controlled if leak via println.
    // The print-or-not pattern reveals the secret to a timing/output observer.
    if authorized {
        println("access granted");
    } else {
        println("access denied");
    }
}

fn main() -> Unit ! Console {
    check_access(true);
}
